# ChessEngine

./: .gitignore  CLAUDE.md  CMakeLists.txt
include/engine/: attacks.hpp  bitboard.hpp  board.hpp  datagen.hpp  eval.hpp  move.hpp  movegen.hpp  pawn_table.hpp  perft.hpp  search.hpp  see.hpp  tt.hpp  tuner.hpp  types.hpp  uci.hpp  zobrist.hpp
src/: attacks.cpp  board.cpp  datagen.cpp  eval.cpp  eval_params.cpp  main.cpp  movegen.cpp  pawn_table.cpp  search.cpp  see.cpp  tt.cpp  tuner.cpp  uci.cpp  zobrist.cpp
tests/: CMakeLists.txt  attacks_test.cpp  board_test.cpp  datagen_test.cpp  eval_test.cpp  pawn_table_test.cpp  perft_test.cpp  search_test.cpp  see_test.cpp  sliding_test.cpp  tt_test.cpp  tuner_test.cpp  uci_test.cpp  zobrist_test.cpp
tools/sprt/: README.md  book.epd  build-version.ps1  gen-book.ps1  gen-data.ps1  noob_2moves.epd  sprt.ps1  tc-scaling.ps1
tools/sprt/gui/: index.html  run-pipeline.ps1  serve.ps1  start-gui.cmd
